tests/NormalTests/paczka2/big_fuzzy/70087175.err
Error in line 6: dlkh0FFi S725 6,8
Error in line 7: S390 S725 31,7
Error in line 8: dlkh0FFi S390 15,3
Error in line 18: S390 S412 92,0
Error in line 27: S390 S162 84,3
Error in line 30: U3J3S S412 75,1
Error in line 28: S390 S412 80,0
Error in line 35: S390 S390 18,9
Error in line 39: yssq S725 47,9
Error in line 31: DrbugY S390 75,0
Error in line 43: S390 S412 66,9
Error in line 44: S390 S390 4,5
Error in line 46: S390 S162 30,5
Error in line 40: yssq S390 97,3
Error in line 51: 1B0J8Yh2z S412 0,2
Error in line 56: 1B0J8Yh2z S390 23,4
Error in line 62: dlkh0FFi S412 19,5
Error in line 69: 1B0J8Yh2z S390 78,6
Error in line 76: 0S2 S725 95,2
Error in line 83: U3J3S S162 56,4
Error in line 85: U3J3S S725 62,8
Error in line 77: 0S2 S412 71,8
Error in line 72: dlkh0FFi S162 38,4
Error in line 93: yssq S162 99,6
Error in line 99: 1B0J8Yh2z S725 38,9
Error in line 101: 1B0J8Yh2z S162 5,1
Error in line 100: U3J3S S412 14,9
Error in line 114: 1B0J8Yh2z S412 51,9
Error in line 123: S390 S412 20,2
Error in line 133: yssq S162 35,4
Error in line 118: dlkh0FFi S390 28,1
Error in line 128: 0S2 S390 4,5
Error in line 145: yssq S412 37,1
Error in line 150: DrbugY S390 32,6
Error in line 153: DrbugY S725 88,47
Error in line 147: yssq S162 49,3
Error in line 157: S390 S725 59,7
Error in line 151: DrbugY S725 49,0
Error in line 154: yssq S412 73,5
Error in line 164: yssq S390 30,1
Error in line 171: S390 S412 69,9
Error in line 163: 1B0J8Yh2z S390 6,9
Error in line 177: U3J3S S412 1,8
Error in line 194: yssq S412 35,0
Error in line 196: DrbugY S725 74,5
Error in line 209: 0S2 S725 36,0
Error in line 213: 0S2 S412 91,5
Error in line 191: S390 S390 63,3
Error in line 219: DrbugY S412 81,4
Error in line 231: 1B0J8Yh2z S412 82,1
Error in line 234: 1B0J8Yh2z S162 9,0
Error in line 228: yssq S162 77,9
Error in line 241: S390 S412 88,87
